--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,8 +1,6 @@
 <%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
- 
-  <%= f.hidden_field :author_id %>
- 
+  <% author_id_field(@post) %> <br>
   <%= f.text_field :title %><br>
   <label>Post Description</label><br>
   <%= f.text_area :description %><br>
