--- a/app/views/authors/show.html.erb
+++ b/app/views/authors/show.html.erb
@@ -1,6 +1,10 @@
-<h1><%= @author.name %></h1>
-
-<p>Posts:</p>
-<% @author.posts.each do |post| %>
-  <div><%= post.title %></div>
+<%= form_for(@post) do |f| %>
+  <label>Post title:</label><br>
+ 
+  <%= f.hidden_field :author_id %>
+ 
+  <%= f.text_field :title %><br>
+  <label>Post Description</label><br>
+  <%= f.text_area :description %><br>
+  <%= f.submit %>
 <% end %>
