--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,9 +1,9 @@
+<!-- posts/_form.html.erb -->
+
 <%= form_for(@post) do |f| %>
+<%= author_id_field(@post) %>
   <label>Post title:</label><br>
-  <%= f.text_field :title %><br>
-
-  <label>Post Description</label><br>
-  <%= f.text_area :description %><br>
-
-  <%= f.submit %>
-<% end %>
+  <% if @post.author.nil? %>
+    <%= f.select :author_id, options_from_collection_for_select(Author.all, :id, :name) %><br>
+  <% end %>
+  <%= f.hidden_field :author_id %>
